# baba-text

./: .gitignore  Dockerfile  README.md  baba_draws.py  baba_says.py  bot.py  cloudformation.yaml  main.py  pyproject.toml  requirements.txt  slim.include
.github/workflows/: aws.yml  build.yml
baba_text/: animated_ascii_art.py  animated_letter.py  animated_object.py  animated_text.py  animated_word.py  color.py  constants.py  masked_image.py  rect.py
src/baba_text/: animated_letter.py  animated_object.py  animated_text.py  baba_draws.py  baba_says.py  constants.py
tests/: test_ascii_text.py  test_characters.py  test_color.py  test_layout.py
